--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: login_view3_lego
-description: "Login view3 lego"
+description: "beautiful login view3 lego"
 #publish_to: 'none'
 repository: https://github.com/flutter-lego/login_view3_lego
 
-version: 1.0.0
+version: 1.0.1
 
 environment:
   sdk: '>=3.3.1 <4.0.0'
